# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"] # Specify minimum setuptools version
build-backend = "setuptools.build_meta"

[project]
name = "matrix_utils_demo" # The name pip will use (pip install matrix_utils_demo)
version = "0.1.0" # Initial version, should match __version__ in __init__.py
authors = [
  { name="Wenwen Li", email="wenwenli@bu.edu" }, 
]
description = "A simple demo package for generating matrices."
readme = "README.md" # Optional: specify your README file
requires-python = ">=3.7" # Specify compatible Python versions
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Choose a license (e.g., MIT)
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20", # Specify dependencies and minimum versions
]

[project.urls]
"Homepage" = "https://github.com/AlyssaLi2022/peer_to_peer_system"
